# cfg

./: .gitignore  LICENSE  TODO.md  cfg.cabal  flake.nix  fourmolu.yaml  hie.yaml  scripts.nix
.github/workflows/: ci.yaml  release.yaml
doctest/: Main.hs
scripts/: hkg.sh
src/: Cfg.hs  KeyTree.hs
src/Cfg/: Deriving.hs  Env.hs  Options.hs  Parser.hs  Source.hs
src/Cfg/Deriving/: Assert.hs  Config.hs  ConfigRoot.hs  ConfigValue.hs  KeyModifier.hs  LabelModifier.hs  SubConfig.hs  Value.hs
src/Cfg/Env/: Keys.hs
src/Cfg/Parser/: Config.hs  ConfigParser.hs  Value.hs  ValueParser.hs
src/Cfg/Source/: Config.hs  Default.hs  Deriving.hs  NestedConfig.hs  RootConfig.hs
src/Tree/: Append.hs
test/: Main.hs  doctests.hs
test/Cfg/: EnvSpec.hs  ParserSpec.hs  SourceSpec.hs
test/Cfg/Deriving/: KeyModifierSpec.hs  LabelModifierSpec.hs
test/Cfg/Env/: KeysSpec.hs
test/Cfg/Source/: GenericSpec.hs
